@@ -1,3 +1,10 @@
+2010-01-25  Christian Bruel  <christian.bruel@st.com>
+
+	PR target/42841
+	* config/sh/sh.c (find_barrier): Increase length for non delayed
+	conditional branches.
+	(sh_insn_length_adjustment): Use JUMP_TABLE_DATA_P.
+	
 2010-01-25  Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
 
 	Backport from trunk.
